fix(rka): persist exact traced deploy lifecycle